--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "description": "Portfolio of Ambrish Goswami",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  
+    "scripts": {
+      "dev": "cross-env NODE_ENV=development next dev",
+      "build": "cross-env NODE_ENV=production next build",
+      "start": "cross-env NODE_ENV=production next start"
+    }
+  
+  ,
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "^14.1.3",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "latest",
+    "cross-env": "^7.0.3",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
