--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "description": "Portfolio of Ambrish Goswami",
   "version": "0.1.0",
   "private": true,
-  
-   "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  }
-  ,
+  },
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "^14.1.3",
     "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
     "next": "^14.1.3",
+    "next-fonts": "^1.5.1",
     "react": "latest",
     "react-dom": "latest",
     "react-fast-marquee": "^1.6.2",
